# tx81z-vst-emulator

./: .gitignore  CREDITS.md  DISCLAIMER.md  README.md  THIRD_PARTY_LICENSES.md
engine/: CMakeLists.txt
engine/include/tx81z/: bus.h  cpu_core.h  hd44780.h  tx81z_bus.h  types.h
engine/src/: cpu_core.cpp  hd44780.cpp  tx81z_bus.cpp
engine/tests/: test_cpu.cpp  test_system.cpp
engine/tools/: boot_rom.cpp  direct_opz_test.cpp  render_note.cpp
plugin/: CMakeLists.txt
plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
